feat: add content sections

--- a/src/index.html
+++ b/src/index.html
@@ -46,21 +46,11 @@
                 <img  class="content__img" src="images/cake.png" alt="ui-ux">
                 <p class="content__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque, esse nesciunt sapiente sequi pariatur ex, ea nulla sint aliquid illo eius placeat voluptatum soluta facilis fuga, repellat totam fugiat impedit?</p>
             </div>
-            <div data-aos="fade-right" class="content">
+            <div data-aos="fade-left" class="content content--mirrored">
                 <img  class="content__img" src="images/cake.png" alt="ui-ux">
-                <p class="content__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque, esse nesciunt sapiente sequi pariatur ex, ea nulla sint aliquid illo eius placeat voluptatum soluta facilis fuga, repellat totam fugiat impedit?</p>
-            </div>
-            <div data-aos="fade-right" class="content">
-                <img  class="content__img" src="images/cake.png" alt="ui-ux">
-                <p class="content__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque, esse nesciunt sapiente sequi pariatur ex, ea nulla sint aliquid illo eius placeat voluptatum soluta facilis fuga, repellat totam fugiat impedit?</p>
-            </div>
-            <div data-aos="fade-right" class="content">
-                <img  class="content__img" src="images/cake.png" alt="ui-ux">
-                <p class="content__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque, esse nesciunt sapiente sequi pariatur ex, ea nulla sint aliquid illo eius placeat voluptatum soluta facilis fuga, repellat totam fugiat impedit?</p>
-            </div>
-            <div data-aos="fade-right" class="content">
-                <img  class="content__img" src="images/cake.png" alt="ui-ux">
-                <p class="content__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque, esse nesciunt sapiente sequi pariatur ex, ea nulla sint aliquid illo eius placeat voluptatum soluta facilis fuga, repellat totam fugiat impedit?</p>
+                <p class="content__text">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque, esse nesciunt sapiente sequi pariatur ex, ea nulla sint aliquid illo eius placeat voluptatum soluta facilis fuga, repellat totam fugiat impedit?
+                </p>
             </div>
         </div>
     </section>
